test/compile-fail/resolution/use/crate/expected.txt
error: unresolved item `crate`
 --> top.rhdl:2:7
  |
2 | use a::crate;
  |        ^^^^^ no `crate` item in `a`
